--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Python
 
 # Controls when the workflow will run
 on:
@@ -26,11 +26,9 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Run a python script
+        run: python .github/workflows/example2.py
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
+   
           echo Add other actions to build,
           echo test, and deploy your project.
